@@ -55,17 +55,23 @@
   <exit-transition transition_id="retract"/>
   <permission-map name="Access contents information"
                   acquired="True">
-   <permission-role>Anonymous</permission-role>
    <permission-role>Manager</permission-role>
+   <permission-role>Owner</permission-role>
+   <permission-role>Reader</permission-role>
+   <permission-role>Editor</permission-role>
   </permission-map>
   <permission-map name="Add portal content" acquired="False">
    <permission-role>Manager</permission-role>
    <permission-role>Owner</permission-role>
    <permission-role>Contributor</permission-role>
+   <permission-role>Authenticated</permission-role>
   </permission-map>
   <permission-map name="List folder contents"
                   acquired="True">
-   <permission-role>Anonymous</permission-role>
+   <permission-role>Manager</permission-role>
+   <permission-role>Owner</permission-role>
+   <permission-role>Reader</permission-role>
+   <permission-role>Editor</permission-role>
   </permission-map>
   <permission-map name="Modify portal content"
                   acquired="False">
@@ -78,10 +84,13 @@
    <permission-role>Manager</permission-role>
    <permission-role>Owner</permission-role>
    <permission-role>Contributor</permission-role>
+   <permission-role>Authenticated</permission-role>
   </permission-map>
   <permission-map name="View" acquired="True">
-   <permission-role>Anonymous</permission-role>
    <permission-role>Manager</permission-role>
+   <permission-role>Owner</permission-role>
+   <permission-role>Reader</permission-role>
+   <permission-role>Editor</permission-role>
   </permission-map>
  </state>
  <state state_id="visible" title="Visible">
@@ -89,9 +98,10 @@
   <exit-transition transition_id="publish"/>
   <permission-map name="Access contents information"
                   acquired="True">
-   <permission-role>Anonymous</permission-role>
    <permission-role>Manager</permission-role>
+   <permission-role>Owner</permission-role>
    <permission-role>Reader</permission-role>
+   <permission-role>Editor</permission-role>
   </permission-map>
   <permission-map name="Add portal content" acquired="False">
    <permission-role>Manager</permission-role>
@@ -99,10 +109,11 @@
    <permission-role>Contributor</permission-role>
   </permission-map>
   <permission-map name="List folder contents"
-                  acquired="False">
+                  acquired="True">
    <permission-role>Manager</permission-role>
    <permission-role>Owner</permission-role>
-   <permission-role>Member</permission-role>
+   <permission-role>Reader</permission-role>
+   <permission-role>Editor</permission-role>
   </permission-map>
   <permission-map name="Modify portal content"
                   acquired="False">
@@ -117,9 +128,9 @@
    <permission-role>Contributor</permission-role>
   </permission-map>
   <permission-map name="View" acquired="True">
-   <permission-role>Anonymous</permission-role>
    <permission-role>Manager</permission-role>
    <permission-role>Reader</permission-role>
+   <permission-role>Editor</permission-role>
   </permission-map>
  </state>
  <transition transition_id="hide" title="Hide"
